Fix for tertiary nav wrapping

--- a/sass/parts/_tertiary_nav.scss
+++ b/sass/parts/_tertiary_nav.scss
@@ -122,6 +122,7 @@
 			min-width: 200px;
 			text-align: right;
 			position: relative;
+			white-space: nowrap;
 
 			> li {
 				@include xrx_bnrv4_list_dividers("left");
